# BOT8000

./: .gitignore  Dockerfile  Dockerfile.cloudrun  LICENSE  README.md  README_OPTIMIZER.md  README_V3.md  backtest_results.txt  consolidate_for_notebooklm.py  debug_pipeline.py  deploy-cloud-run.sh  docker-compose.yml  dry_run_config.yaml  find_w1.py  optimizer_config.yaml  pyproject.toml  requirements.txt  run_system.sh  test_db_connection.py  test_fitness_manual.py  test_ga_manual.py  test_indicators_real.py  trading-bot-v3-ml-implementation-plan.md  walk_forward_results.txt
.agent/: CLAUDE.md  auditor.py
data/: BTCUSDT_4h_2024.csv
docs/: CURRENT_STATE.md  WFV_SUMMARY.txt  architecture.md  backtest_results.md  deployment_roadmap.md  risk_management.md
logs/: PLAN_24H_old.md
notebooklm-sources/: 00_INDEX.txt  01_TJR_METHODOLOGY.txt  02_USER_GUIDE.txt  03_ARCHITECTURE.txt  04_BACKTEST_RESULTS.txt  05_FAQ.txt  bot8000-code-chunk-01.txt
results/: optimizer_checkpoint.json  optimizer_results.csv  summary.txt
scripts/: analyze_top_3.py  dashboard_wfo.py  download_may_data.py  get_telegram_chatid.py  migrate_add_symbol.py  monitor_wfo.py  optimizer.py  run_backtest.py  run_multi_month_backtest.py  run_oos_validation.py  run_oos_validation_draft.py  run_wfo.py  setup_telegram_alerts.py  validate_alpha_engine.py  validate_full_system.py  validate_walk_forward.py
sql/: init.sql
tests/: reproduce_api_crash.py  test_analyzer.py  test_data_agent.py  test_features.py  test_fitness_metrics_flow.py  test_fitness_trades.py  test_orchestrator.py  test_pattern_detective.py  (+6 more)
(+129 files in other folders)
